ENK-2438: jobs cancel
